deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: dev-namespace
spec:
  replicas: 20                      # Number of replicas
  selector:
    matchLabels:
      app: myapp
  strategy:
    type:  Recreate            # Rolling update strategy
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx:latest     # httpd:latest         # Image for your app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
# tmBQH-hJszkqmetN
