readiness-liveliness-start-prob.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-app
  namespace: test  
spec:
  containers:
  - name: web-server
    image: betrand1997/my-static-websites
    ports:
    - containerPort: 8080
    # Startup Probe
    startupProbe:
      httpGet:
        path: /healthz/startup
        port: 8080
      failureThreshold: 30
      periodSeconds: 10
    # Liveness Probe
    livenessProbe:
      httpGet:
        path: /healthz/liveness
        port: 8080
      initialDelaySeconds: 60
      periodSeconds: 10
      failureThreshold: 3
    # Readiness Probe
    readinessProbe:
      httpGet:
        path: /healthz/readiness
        port: 8080
      initialDelaySeconds: 60
      periodSeconds: 5
      failureThreshold: 3
