secret-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-secret
  namespace: dev-namespace
spec:
  selector:
    matchLabels:
      app: deploy-secret
  template:
    metadata:
      labels:
        app: deploy-secret
    spec:
      containers:
      - name: myapp
        image: httpd
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
