topology-spread-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topology-spread-demo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
        ### focus here ###
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: demo-app
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
