EOF.yaml
cat <<EOF > <EOF.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: my-namespace
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 8080
EOF
  type: NodePort
