headless-service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
  namespace: dev-namespace
spec:
  serviceName: "web-headless"
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.6
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: web-headless
  namespace: dev-namespace
spec:
  clusterIP: None
  selector:
    app: nginx
  ports:
  - port: 80
    name: web
