service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: dev-namespace
spec:
  selector:
    name: myapp
  ports:
  - port: 80
    targetPort: 80
  type: NodePort # 30 to 32000
