ingress-with-service-ingress-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: default
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: default
spec:
  selector:
    app: myapp  # Matches the label on the pod
  ports:
    - protocol: TCP
      port: 80           # Exposed port
      targetPort: 80     # Port on the pod where NGINX listens
  type: ClusterIP        # Internal service only
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-deployment
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: betrandmutagha.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-service  # Name of the service
            port:
              number: 80
